--- a/package.json
+++ b/package.json
@@ -6,6 +6,25 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mongoose": "^7.3.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
+  },
+  "name": "admin-dashboard",
+  "description": "<a name=\"readme-top\"></a>",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
